--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,7 @@
 {
   "version": 2,
-  "name": "rowedy-panel",
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/", "dest": "index.html" },
+    { "src": "/owner", "dest": "Owner.html" }
   ]
 }
